# prrte

./: configure.ac
config/: prte_setup_cc.m4
src/mca/base/: prte_mca_base_framework.c
src/mca/grpcomm/ucx/: Makefile.am  grpcomm_ucx.c  grpcomm_ucx.h  grpcomm_ucx_component.c  owner.txt
src/mca/rml/: rml_types.h
src/tools/prte/: Makefile.am  prte.c
src/tools/prted/: Makefile.am
src/tools/prun/: Makefile.am
src/util/: attr.h
